--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,20 +10,12 @@
         <li>Starting at the 5th log item, give all future log items a blue background (via ngStyle) and white color
           (ngClass)</li>
       </ol>
-    </div>
-  </div>
-</div>
-<hr>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <button class="btn btn-primary" (click)="toggleDetails()">Display Details</button>
-      <p [hidden]="!showDetails" class="bg-info">Secret Password = tuna</p>
-      <div *ngFor="let log of logs">
-        <p *ngIf="log < 5">{{ log }}</p>
-        <p *ngIf="log >= 5" [ngStyle]="{ 'background-color': 'blue' }" [ngClass]="{ textSuccess: log >= 5 }">{{ log }}
-        </p>
-      </div>
+      <hr>
+      <button class="btn btn-primary" (click)="onToggleDetails()">Display Details</button>
+      <p *ngIf="showSecret">Secret Password = tuna</p>
+      <div *ngFor="let logItem of log" [ngStyle]="{'background-color': logItem >= 5 ? 'blue' : 'transparent'}"
+        [ngClass]="{'white-text': logItem >= 5}">
+        {{logItem}}</div>
     </div>
   </div>
 </div>
