--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
       <hr>
       <button class="btn btn-primary" (click)="onToggleDetails()">Display Details</button>
       <p *ngIf="showSecret">Secret Password = tuna</p>
-      <div *ngFor="let logItem of log" [ngStyle]="{'background-color': logItem >= 5 ? 'blue' : 'transparent'}"
-        [ngClass]="{'white-text': logItem >= 5}">
+      <div *ngFor="let logItem of log; let i = index" [ngStyle]="{'background-color': i >= 4 ? 'blue' : 'transparent'}"
+        [ngClass]="{'white-text': i >= 4}">
         {{logItem}}</div>
     </div>
   </div>
